[package]
name = "castflip"
version = "0.1.10"
edition = "2021"
description = "Library for encoding/decoding numeric variables, arrays and structures in little-endian and big-endian"
categories = ["encoding", "parsing"]
keywords = ["endian", "cast"]
license = "MIT-0"
readme = "README.md"
repository = "https://github.com/noriov/castflip"

[dependencies]
castflip_derive = { path = "../castflip_derive", version = "0.1" }

[features]
default = ["std"]
alloc = []
std = ["alloc"]
