[package]
name = "castflip"
version = "0.1.13"
edition = "2024"
rust-version = "1.85.1"
description = "Library for encoding/decoding numeric variables, arrays and structures in little-endian and big-endian"
categories = ["encoding", "parsing"]
keywords = ["endian", "cast"]
license = "MIT-0"
readme = "README.md"
repository = "https://github.com/noriov/castflip"

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dependencies.castflip_derive]
version = "0.1"
path = "../castflip_derive"
