[package]
name = "castflip_derive"
version = "0.1.3"
edition = "2021"
description = "Derive macros for castflip"
license = "MIT-0"
readme = "crates-io.md"
repository = "https://github.com/noriov/castflip"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies]
castflip = { path = "../castflip", version = "0.1" }
