[package]
name = "castflip_derive"
version = "0.1.5"
edition = "2021"
description = "Derive macros for castflip"
license = "MIT-0"
readme = "README.md"
repository = "https://github.com/noriov/castflip"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies]
castflip = { path = "../castflip", version = "0.1" }
